Added Call Buttons Functionality

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div
             class="bg-[rgba(65,255,107,10%)] inter-black text-base h-[3.25rem] w-[6.625rem] flex justify-center items-center gap-[0.625rem] rounded-full"
           >
-            <p id="coin">100</p>
+            <p id="coin">500</p>
             <img src="assets/coin.png" alt="coin" class="w-6 h-6" />
           </div>
           <div
@@ -72,7 +72,7 @@
       </div>
     </header>
     <main
-      class="bg-[#F5FFF6] py-12 px-15 grid grid-cols-1 lg:grid-cols-[3.5fr_1fr] gap-[1.875rem]"
+      class="bg-[#F5FFF6] py-12 px-15 grid grid-cols-1 lg:grid-cols-[3.5fr_1fr] gap-[1.875rem] lg:h-[77.25rem]"
     >
       <!-- Emergency Hotline Section -->
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-[1.875rem]">
@@ -91,7 +91,7 @@
               class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
-          <div class="mb-6">
+          <div class="mb-6 name-container">
             <h2 class="hind-madurai-bold text-2xl">
               National Emergency Number
             </h2>
@@ -99,7 +99,7 @@
               National Emergency
             </p>
           </div>
-          <div class="mb-6">
+          <div class="mb-6 number-container">
             <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
               999
             </p>
@@ -111,15 +111,13 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
             </button>
             <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full call-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-green-800"
             >
               <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="inter-light text-base text-white">Call</p>
@@ -141,11 +139,11 @@
               class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
-          <div class="mb-6">
+          <div class="mb-6 name-container">
             <h2 class="hind-madurai-bold text-2xl">Police Helpline Number</h2>
             <p class="roboto-regular text-[1.125rem] text-gray-500">Police</p>
           </div>
-          <div class="mb-6">
+          <div class="mb-6 number-container">
             <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
               999
             </p>
@@ -157,15 +155,13 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
             </button>
             <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full call-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-green-800"
             >
               <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="inter-light text-base text-white">Call</p>
@@ -187,13 +183,13 @@
               class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
-          <div class="mb-6">
+          <div class="mb-6 name-container">
             <h2 class="hind-madurai-bold text-2xl">Fire Service Number</h2>
             <p class="roboto-regular text-[1.125rem] text-gray-500">
               Fire Service
             </p>
           </div>
-          <div class="mb-6">
+          <div class="mb-6 number-container">
             <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
               999
             </p>
@@ -205,15 +201,13 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
             </button>
             <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full call-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-green-800"
             >
               <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="inter-light text-base text-white">Call</p>
@@ -235,13 +229,13 @@
               class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
-          <div class="mb-6">
+          <div class="mb-6 name-container">
             <h2 class="hind-madurai-bold text-2xl">Ambulance Service</h2>
             <p class="roboto-regular text-[1.125rem] text-gray-500">
               Ambulance
             </p>
           </div>
-          <div class="mb-6">
+          <div class="mb-6 number-container">
             <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
               1994-999999
             </p>
@@ -253,15 +247,13 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
             </button>
             <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full call-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-green-800"
             >
               <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="inter-light text-base text-white">Call</p>
@@ -283,13 +275,13 @@
               class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
-          <div class="mb-6">
+          <div class="mb-6 name-container">
             <h2 class="hind-madurai-bold text-2xl">Women & Child Helpline</h2>
             <p class="roboto-regular text-[1.125rem] text-gray-500">
               Women & Child Helpline
             </p>
           </div>
-          <div class="mb-6">
+          <div class="mb-6 number-container">
             <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
               109
             </p>
@@ -301,15 +293,13 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
             </button>
             <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full call-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-green-800"
             >
               <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="inter-light text-base text-white">Call</p>
@@ -331,13 +321,13 @@
               class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
-          <div class="mb-6">
+          <div class="mb-6 name-container">
             <h2 class="hind-madurai-bold text-2xl">Anti-Corruption Helpline</h2>
             <p class="roboto-regular text-[1.125rem] text-gray-500">
               Anti-Corruption
             </p>
           </div>
-          <div class="mb-6">
+          <div class="mb-6 number-container">
             <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
               106
             </p>
@@ -349,15 +339,13 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
             </button>
             <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full call-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-green-800"
             >
               <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="inter-light text-base text-white">Call</p>
@@ -379,13 +367,13 @@
               class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
-          <div class="mb-6">
+          <div class="mb-6 name-container">
             <h2 class="hind-madurai-bold text-2xl">Electricity Helpline</h2>
             <p class="roboto-regular text-[1.125rem] text-gray-500">
               Electricity Outage
             </p>
           </div>
-          <div class="mb-6">
+          <div class="mb-6 number-container">
             <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
               16216
             </p>
@@ -397,15 +385,13 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
             </button>
             <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full call-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-green-800"
             >
               <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="inter-light text-base text-white">Call</p>
@@ -427,11 +413,11 @@
               class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
-          <div class="mb-6">
+          <div class="mb-6 name-container">
             <h2 class="hind-madurai-bold text-2xl">Brac Helpline</h2>
             <p class="roboto-regular text-[1.125rem] text-gray-500">Brac</p>
           </div>
-          <div class="mb-6">
+          <div class="mb-6 number-container">
             <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
               16445
             </p>
@@ -443,15 +429,13 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
             </button>
             <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full call-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-green-800"
             >
               <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="inter-light text-base text-white">Call</p>
@@ -473,7 +457,7 @@
               class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
-          <div class="mb-6">
+          <div class="mb-6 name-container">
             <h2 class="hind-madurai-bold text-2xl">
               Bangladesh Railway Helpline
             </h2>
@@ -481,7 +465,7 @@
               Bangladesh Railway
             </p>
           </div>
-          <div class="mb-6">
+          <div class="mb-6 number-container">
             <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
               163
             </p>
@@ -493,15 +477,13 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
             </button>
             <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full call-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-green-800"
             >
               <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="inter-light text-base text-white">Call</p>
@@ -510,7 +492,9 @@
         </div>
       </div>
       <!-- History Section -->
-      <div class="bg-white rounded-xl h-full p-6 shadow-lg">
+      <aside
+        class="bg-white rounded-xl p-6 shadow-lg lg:h-full lg:overflow-y-hidden"
+      >
         <div class="flex justify-between items-center mb-[1rem]">
           <div class="flex items-center gap-[0.5rem]">
             <img src="assets/clock.png" alt="Clock Icon" class="w-6 h-6" />
@@ -522,22 +506,11 @@
             Clear
           </button>
         </div>
-        <div id="call-histories">
-          <div
-            class="p-[1rem] w-full bg-gray-50 rounded-lg flex items-center justify-between gap-[1rem]"
-          >
-            <div>
-              <p class="inter-semibold text-[1.125rem]">Fire Service Number</p>
-              <p class="hind-madurai-regular text-[1.125rem] text-gray-500">
-                999
-              </p>
-            </div>
-            <p class="hind-madurai-regular text-[1.125rem] text-gray-700">
-              11:36:58 AM
-            </p>
-          </div>
-        </div>
-      </div>
+        <div
+          id="call-histories"
+          class="lg:h-full lg:overflow-y-auto lg:scroll-smooth"
+        ></div>
+      </aside>
     </main>
     <script src="script.js"></script>
   </body>
