Added Clear Button Functionality

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div
             class="bg-[rgba(65,255,107,10%)] inter-black text-base h-[3.25rem] w-[6.625rem] flex justify-center items-center gap-[0.625rem] rounded-full"
           >
-            <p id="coin">500</p>
+            <p id="coin">100</p>
             <img src="assets/coin.png" alt="coin" class="w-6 h-6" />
           </div>
           <div
@@ -501,7 +501,8 @@
             <p class="roboto-semibold text-[1.125rem]">Call History</p>
           </div>
           <button
-            class="bg-[#00A63E] text-white rounded-full inter-regular text-[1rem] px-9 py-[0.875rem]"
+            id="clear-button"
+            class="bg-[#00A63E] text-white rounded-full inter-regular text-[1rem] px-9 py-[0.875rem] transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-green-800"
           >
             Clear
           </button>
