Added Copy Button Functionality

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-gray-200"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
@@ -155,7 +155,7 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-gray-200"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
@@ -201,7 +201,7 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-gray-200"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
@@ -247,7 +247,7 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-gray-200"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
@@ -293,7 +293,7 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-gray-200"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
@@ -339,7 +339,7 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-gray-200"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
@@ -385,7 +385,7 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-gray-200"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
@@ -429,7 +429,7 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-gray-200"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
@@ -477,7 +477,7 @@
           </div>
           <div class="flex h-10 gap-2">
             <button
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full copy-button transition-all ease-in-out duration-300 hover:cursor-pointer hover:bg-gray-200"
             >
               <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
               <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
