Added the Answers of the Given Questions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Emergency Service Directory</title>
   </head>
   <body>
@@ -44,7 +44,7 @@
           <div
             class="bg-[rgba(65,255,107,10%)] inter-black text-base h-[3.25rem] w-[6.625rem] flex justify-center items-center gap-[0.625rem] rounded-full"
           >
-            <p id="coin">100</p>
+            <p id="coin">300</p>
             <img src="assets/coin.png" alt="coin" class="w-6 h-6" />
           </div>
           <div
@@ -509,7 +509,7 @@
         </div>
         <div
           id="call-histories"
-          class="lg:h-full lg:overflow-y-auto lg:scroll-smooth"
+          class="h-[40rem] lg:h-[calc(100%_-_3.25rem)] overflow-y-auto scroll-smooth"
         ></div>
       </aside>
     </main>
