Fixed Call History Title issue

--- a/index.html
+++ b/index.html
@@ -498,7 +498,9 @@
         <div class="flex justify-between items-center mb-[1rem]">
           <div class="flex items-center gap-[0.5rem]">
             <img src="assets/clock.png" alt="Clock Icon" class="w-6 h-6" />
-            <p class="roboto-semibold text-[1.125rem]">Call History</p>
+            <p class="roboto-semibold text-[1.125rem] mt-[0.13rem]">
+              Call History
+            </p>
           </div>
           <button
             id="clear-button"
